# bookmart

./: .env.example  .gitignore  2026년 1기 컴퓨터 교재 신청서_길음초 (1).xlsx  Procfile  bookmart.code-workspace  debug_drive.py  debug_remote.py  fix_inbox_remote.py  main.py  pyproject.toml  requirements.txt  교재리스트2026.xlsx  북마트 견적서2025.xlsx
.claude/: settings.local.json
.github/workflows/: deploy.yml
accounts/: admin.py  decorators.py  forms.py  middleware.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_invite_token.py  0004_user_agency_slug.py  0005_add_agency_code.py  0006_populate_agency_codes.py  0007_user_plain_password.py  0008_remove_user_plain_password.py  0009_add_is_individual_and_supply_rate_override.py  0010_add_plain_password.py  0011_add_fields_phase1.py  0012_ledger_format.py
books/: admin.py  forms.py  models.py  urls.py  views.py
books/fixtures/: publishers.json
books/migrations/: 0001_initial.py  0002_db_improvements.py  0003_alter_book_options_book_agencies_book_grade_and_more.py
config/: settings.py  urls.py
orders/: admin.py  call_order.py  context_processors.py  email_utils.py  models.py  services.py  signals.py  sms.py  urls.py  views.py  views_simple.py
orders/migrations/: 0001_initial.py  0002_add_tracking_no.py  0003_add_inbox_message.py  0004_add_inbox_attachment.py  0005_inboxmessage_is_read_message_id.py  0006_add_link_access_log.py  0007_add_custom_book_fields.py  0008_add_order_source.py  0009_remove_teacher_source.py  0010_add_shipment.py  0011_db_improvements.py  (+12 more)
templates/: base.html
(+94 files in other folders)
