[project]
name = "bookmart"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "dj-database-url>=3.1.2",
    "django==5.2",
    "django-axes>=8.3.1",
    "gunicorn>=25.1.0",
    "openpyxl>=3.1.5",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "whitenoise>=6.12.0",
]
